--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/HaruhiMeterScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/HaruhiMeterScriptCommandEditorView.axaml
@@ -7,15 +7,47 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:HaruhiMeterScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.HaruhiMeterScriptCommandEditorView">
-    <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Add}"/>
-        <NumericUpDown Grid.Column="1" Grid.Row="0" Margin="10,0,0,0"  Value="{Binding AddAmount}"
-                       Minimum="-9" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer" IsVisible="{Binding !NoShow}"/>
-        <NumericUpDown Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Value="{Binding AddNoShowAmount}"
-                       Minimum="-9" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer" IsVisible="{Binding NoShow}"/>
+    <Grid ColumnDefinitions="Auto,Auto,Auto" RowDefinitions="Auto">
+        <ComboBox Grid.Row="0" Grid.Column="0" ItemsSource="{Binding Modes}"
+                  SelectedItem="{Binding SelectedMode}" Margin="0 0 10 0"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Set}" IsVisible="{Binding !NoShow}"/>
-        <NumericUpDown Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" Value="{Binding SetAmount}"
-                       Minimum="0" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer" IsVisible="{Binding !NoShow}"/>
+        <TextBlock Grid.Column="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Add}"
+                   IsVisible="{Binding IsAdd}"/>
+        <NumericUpDown Grid.Column="2" Margin="10,0,0,0"  Value="{Binding AddAmount}"
+                       Minimum="-9" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer">
+            <NumericUpDown.IsVisible>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                    <Binding Path="!NoShow"/>
+                    <Binding Path="IsAdd"/>
+                </MultiBinding>
+            </NumericUpDown.IsVisible>
+        </NumericUpDown>
+        <NumericUpDown Grid.Column="2" Margin="10,0,0,0" Value="{Binding AddNoShowAmount}"
+                       Minimum="-9" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer">
+            <NumericUpDown.IsVisible>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                    <Binding Path="NoShow"/>
+                    <Binding Path="IsAdd"/>
+                </MultiBinding>
+            </NumericUpDown.IsVisible>
+        </NumericUpDown>
+
+        <TextBlock Grid.Column="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Set}">
+            <TextBlock.IsVisible>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                    <Binding Path="!NoShow"/>
+                    <Binding Path="!IsAdd"/>
+                </MultiBinding>
+            </TextBlock.IsVisible>
+        </TextBlock>
+        <NumericUpDown Grid.Column="2" Margin="10,0,0,0" Value="{Binding SetAmount}"
+                       Minimum="0" Maximum="9" FormatString="N0" Increment="1" ParsingNumberStyle="Integer">
+            <NumericUpDown.IsVisible>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                    <Binding Path="!NoShow"/>
+                    <Binding Path="!IsAdd"/>
+                </MultiBinding>
+            </NumericUpDown.IsVisible>
+        </NumericUpDown>
     </Grid>
 </UserControl>
