--- a/src/SerialLoops/Views/Dialogs/AsmHacksDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/AsmHacksDialog.axaml
@@ -44,10 +44,10 @@
             </ScrollViewer>
             <StackPanel Name="DescriptionPanel" Orientation="Vertical" Grid.Row="0" Grid.Column="1"
                         Spacing="5" Margin="3" Width="300" Height="400"/>
+            <Button Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Name="ImportHackButton" Content="{x:Static assets:Strings.Import_Hack}"
+                    Command="{Binding ImportHackCommand}" CommandParameter="{Binding $parent[local:AsmHacksDialog]}"/>
             <StackPanel Name="ButtonsPanel" Orientation="Horizontal" Spacing="3" Margin="5"
                         Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Right">
-                <Button Name="ImportHackButton" Content="{x:Static assets:Strings.Import_Hack}"
-                        Command="{Binding ImportHackCommand}" CommandParameter="{Binding $parent[local:AsmHacksDialog]}"/>
                 <Button Name="CancelButton" Content="{x:Static assets:Strings.Cancel}" IsCancel="True"
                         Command="{Binding CancelCommand}" CommandParameter="{Binding $parent[local:AsmHacksDialog]}"/>
                 <Button Name="SaveButton" Content="{x:Static assets:Strings.Save}"
