--- a/src/SerialLoops/Views/Dialogs/BgmLoopPropertiesDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/BgmLoopPropertiesDialog.axaml
@@ -27,8 +27,8 @@
             <CheckBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Content="{x:Static assets:Strings.Loop_}" IsChecked="{Binding LoopPreview.LoopEnabled}"/>
 
             <TextBlock Grid.Row="2" Grid.Column="0" Text="{x:Static assets:Strings.Start}" VerticalAlignment="Center"/>
-            <NumericUpDown Grid.Row="2" Grid.Column="1" Name="StartSampleBox" Minimum="0" Maximum="{Binding #EndSampleBox.Value}"
-                           FormatString="0.0000" VerticalAlignment="Center">
+            <NumericUpDown Grid.Row="2" Grid.Column="1" Name="StartSampleBox" Minimum="0"
+                           FormatString="0.0000" VerticalAlignment="Center" ValueChanged="StartSampleBox_OnValueChanged">
                 <NumericUpDown.Value>
                     <MultiBinding Converter="{StaticResource SampleToTimestampConverter}">
                         <Binding Path="LoopPreview"/>
@@ -38,8 +38,8 @@
             </NumericUpDown>
 
             <TextBlock Grid.Row="3" Grid.Column="0" Text="{x:Static assets:Strings.End}" VerticalAlignment="Center"/>
-            <NumericUpDown Grid.Row="3" Grid.Column="1" Name="EndSampleBox" Minimum="{Binding #StartSampleBox.Value}" FormatString="0.0000"
-                           VerticalAlignment="Center">
+            <NumericUpDown Grid.Row="3" Grid.Column="1" Name="EndSampleBox" FormatString="0.0000"
+                           VerticalAlignment="Center" ValueChanged="EndSampleBox_OnValueChanged">
                 <NumericUpDown.Maximum>
                     <MultiBinding Converter="{StaticResource SampleToTimestampConverter}">
                         <Binding Path="LoopPreview"/>
@@ -53,7 +53,6 @@
                     </MultiBinding>
                 </NumericUpDown.Value>
             </NumericUpDown>
-
 
             <Image Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Source="{Binding Waveform, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
                        Width="{Binding Waveform.Width}" Height="{Binding Waveform.Height}"
