--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -12,15 +12,10 @@
              x:DataType="vm:ScriptEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptEditorView"
              Name="Editor">
-
-    <UserControl.Resources>
-        <utility:IntGreaterThanConverter x:Key="GreaterThanConverter"/>
-    </UserControl.Resources>
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto" MinHeight="384"/>
+            <RowDefinition Height="384" MinHeight="384"/>
             <RowDefinition Height="4"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -35,17 +30,50 @@
 
         <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Left" Orientation="Horizontal">
             <Button Command="{Binding AddScriptCommandCommand}" HotKey="{Binding AddCommandHotKey}"
-                    ToolTip.Tip="{x:Static assets:Strings.Add_Command}">
+                    ToolTip.Tip="{x:Static assets:Strings.Add_Command}" ToolTip.ShowOnDisabled="True">
+                <Button.IsEnabled>
+                    <MultiBinding Converter="{x:Static BoolConverters.Or}">
+                        <Binding Path="SelectedCommand" Converter="{x:Static ObjectConverters.IsNotNull}"/>
+                        <Binding Path="SelectedSection" Converter="{x:Static ObjectConverters.IsNotNull}"/>
+                    </MultiBinding>
+                </Button.IsEnabled>
                 <Svg Path="avares://SerialLoops/Assets/Icons/Add.svg" Width="22"/>
             </Button>
             <Button Command="{Binding AddScriptSectionCommand}" ToolTip.Tip="{x:Static assets:Strings.Add_Section}">
                 <Svg Path="avares://SerialLoops/Assets/Icons/Add_Section.svg" Width="22"/>
             </Button>
-            <Button Command="{Binding DeleteScriptCommandOrSectionCommand}" ToolTip.Tip="{x:Static assets:Strings.ScriptEditorRemoveCommandOrSectionTip}">
+            <Button Command="{Binding DeleteScriptCommandOrSectionCommand}" ToolTip.ShowOnDisabled="True"
+                    ToolTip.Tip="{x:Static assets:Strings.ScriptEditorRemoveCommandOrSectionTip}">
+                <Button.IsEnabled>
+                    <MultiBinding Converter="{x:Static BoolConverters.Or}">
+                        <Binding Path="SelectedCommand" Converter="{x:Static ObjectConverters.IsNotNull}"/>
+                        <Binding Path="SelectedSection" Converter="{x:Static ObjectConverters.IsNotNull}"/>
+                    </MultiBinding>
+                </Button.IsEnabled>
                 <Svg Path="avares://SerialLoops/Assets/Icons/Remove.svg" Width="22"/>
             </Button>
             <Button Command="{Binding ClearScriptCommand}" ToolTip.Tip="{x:Static assets:Strings.Clear_Script}">
                 <Svg Path="avares://SerialLoops/Assets/Icons/Clear.svg" Width="22"/>
+            </Button>
+            <Button Command="{Binding MoveUpCommand}" ToolTip.ShowOnDisabled="True"
+                    ToolTip.Tip="{x:Static assets:Strings.ScriptEditorMoveUpTip}">
+                <Button.IsEnabled>
+                    <MultiBinding Converter="{x:Static BoolConverters.Or}">
+                        <Binding Path="SelectedCommand" Converter="{x:Static ObjectConverters.IsNotNull}"/>
+                        <Binding Path="SelectedSection" Converter="{x:Static ObjectConverters.IsNotNull}"/>
+                    </MultiBinding>
+                </Button.IsEnabled>
+                <Svg Path="avares://SerialLoops/Assets/Icons/Move_Up.svg" Width="22"/>
+            </Button>
+            <Button Command="{Binding MoveDownCommand}" ToolTip.ShowOnDisabled="True"
+                    ToolTip.Tip="{x:Static assets:Strings.ScriptEditorMoveDownTip}">
+                <Button.IsEnabled>
+                    <MultiBinding Converter="{x:Static BoolConverters.Or}">
+                        <Binding Path="SelectedCommand" Converter="{x:Static ObjectConverters.IsNotNull}"/>
+                        <Binding Path="SelectedSection" Converter="{x:Static ObjectConverters.IsNotNull}"/>
+                    </MultiBinding>
+                </Button.IsEnabled>
+                <Svg Path="avares://SerialLoops/Assets/Icons/Move_Down.svg" Width="22"/>
             </Button>
         </StackPanel>
         <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" Source="{Binding Source}"
